compiler/parser/src/snapshots/rustpython_parser__parser__tests__generator_expression_argument.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..141,
    custom: (),
    node: Call {
        func: Located {
            range: 0..8,
            custom: (),
            node: Attribute {
                value: Located {
                    range: 0..3,
                    custom: (),
                    node: Constant {
                        value: Str(
                            " ",
                        ),
                        kind: None,
                    },
                },
                attr: "join",
                ctx: Load,
            },
        },
        args: [
            Located {
                range: 14..139,
                custom: (),
                node: GeneratorExp {
                    elt: Located {
                        range: 14..17,
                        custom: (),
                        node: Name {
                            id: "sql",
                            ctx: Load,
                        },
                    },
                    generators: [
                        Comprehension {
                            target: Located {
                                range: 26..29,
                                custom: (),
                                node: Name {
                                    id: "sql",
                                    ctx: Store,
                                },
                            },
                            iter: Located {
                                range: 33..139,
                                custom: (),
                                node: Tuple {
                                    elts: [
                                        Located {
                                            range: 43..80,
                                            custom: (),
                                            node: IfExp {
                                                test: Located {
                                                    range: 65..70,
                                                    custom: (),
                                                    node: Name {
                                                        id: "limit",
                                                        ctx: Load,
                                                    },
                                                },
                                                body: Located {
                                                    range: 43..61,
                                                    custom: (),
                                                    node: BinOp {
                                                        left: Located {
                                                            range: 43..53,
                                                            custom: (),
                                                            node: Constant {
                                                                value: Str(
                                                                    "LIMIT %d",
                                                                ),
                                                                kind: None,
                                                            },
                                                        },
                                                        op: Mod,
                                                        right: Located {
                                                            range: 56..61,
                                                            custom: (),
                                                            node: Name {
                                                                id: "limit",
                                                                ctx: Load,
                                                            },
                                                        },
                                                    },
                                                },
                                                orelse: Located {
                                                    range: 76..80,
                                                    custom: (),
                                                    node: Constant {
                                                        value: None,
                                                        kind: None,
                                                    },
                                                },
                                            },
                                        },
                                        Located {
                                            range: 90..132,
                                            custom: (),
                                            node: IfExp {
                                                test: Located {
                                                    range: 116..122,
                                                    custom: (),
                                                    node: Name {
                                                        id: "offset",
                                                        ctx: Load,
                                                    },
                                                },
                                                body: Located {
                                                    range: 91..111,
                                                    custom: (),
                                                    node: BinOp {
                                                        left: Located {
                                                            range: 91..102,
                                                            custom: (),
                                                            node: Constant {
                                                                value: Str(
                                                                    "OFFSET %d",
                                                                ),
                                                                kind: None,
                                                            },
                                                        },
                                                        op: Mod,
                                                        right: Located {
                                                            range: 105..111,
                                                            custom: (),
                                                            node: Name {
                                                                id: "offset",
                                                                ctx: Load,
                                                            },
                                                        },
                                                    },
                                                },
                                                orelse: Located {
                                                    range: 128..132,
                                                    custom: (),
                                                    node: Constant {
                                                        value: None,
                                                        kind: None,
                                                    },
                                                },
                                            },
                                        },
                                    ],
                                    ctx: Load,
                                },
                            },
                            ifs: [],
                            is_async: 0,
                        },
                    ],
                },
            },
        ],
        keywords: [],
    },
}
