compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_double_list_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..48,
    custom: (),
    node: ListComp {
        elt: Located {
            range: 1..2,
            custom: (),
            node: Name {
                id: "x",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    range: 7..12,
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                range: 7..8,
                                custom: (),
                                node: Name {
                                    id: "y",
                                    ctx: Store,
                                },
                            },
                            Located {
                                range: 10..12,
                                custom: (),
                                node: Name {
                                    id: "y2",
                                    ctx: Store,
                                },
                            },
                        ],
                        ctx: Store,
                    },
                },
                iter: Located {
                    range: 16..17,
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
            Comprehension {
                target: Located {
                    range: 22..23,
                    custom: (),
                    node: Name {
                        id: "a",
                        ctx: Store,
                    },
                },
                iter: Located {
                    range: 27..28,
                    custom: (),
                    node: Name {
                        id: "b",
                        ctx: Load,
                    },
                },
                ifs: [
                    Located {
                        range: 32..37,
                        custom: (),
                        node: Compare {
                            left: Located {
                                range: 32..33,
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Load,
                                },
                            },
                            ops: [
                                Lt,
                            ],
                            comparators: [
                                Located {
                                    range: 36..37,
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            5,
                                        ),
                                        kind: None,
                                    },
                                },
                            ],
                        },
                    },
                    Located {
                        range: 41..47,
                        custom: (),
                        node: Compare {
                            left: Located {
                                range: 41..42,
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Load,
                                },
                            },
                            ops: [
                                Gt,
                            ],
                            comparators: [
                                Located {
                                    range: 45..47,
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            10,
                                        ),
                                        kind: None,
                                    },
                                },
                            ],
                        },
                    },
                ],
                is_async: 0,
            },
        ],
    },
}
