compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_named_expression_generator_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..23,
    custom: (),
    node: GeneratorExp {
        elt: Located {
            range: 1..11,
            custom: (),
            node: NamedExpr {
                target: Located {
                    range: 1..2,
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Store,
                    },
                },
                value: Located {
                    range: 6..11,
                    custom: (),
                    node: BinOp {
                        left: Located {
                            range: 6..7,
                            custom: (),
                            node: Name {
                                id: "y",
                                ctx: Load,
                            },
                        },
                        op: Add,
                        right: Located {
                            range: 10..11,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                    },
                },
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    range: 16..17,
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    range: 21..22,
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
