compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_tuples.snap
---
source: compiler/parser/src/parser.rs
expression: "parse_program(source, \"<test>\").unwrap()"
---
[
    Located {
        range: 0..11,
        custom: (),
        node: Assign {
            targets: [
                Located {
                    range: 0..4,
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                range: 0..1,
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Store,
                                },
                            },
                            Located {
                                range: 3..4,
                                custom: (),
                                node: Name {
                                    id: "b",
                                    ctx: Store,
                                },
                            },
                        ],
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                range: 7..11,
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            range: 7..8,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    4,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 10..11,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    5,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
]
