compiler/parser/src/snapshots/rustpython_parser__parser__tests__star_index.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 0..36,
        custom: (),
        node: Assign {
            targets: [
                Located {
                    range: 0..11,
                    custom: (),
                    node: Name {
                        id: "array_slice",
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                range: 14..36,
                custom: (),
                node: Subscript {
                    value: Located {
                        range: 14..19,
                        custom: (),
                        node: Name {
                            id: "array",
                            ctx: Load,
                        },
                    },
                    slice: Located {
                        range: 20..35,
                        custom: (),
                        node: Tuple {
                            elts: [
                                Located {
                                    range: 20..21,
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            0,
                                        ),
                                        kind: None,
                                    },
                                },
                                Located {
                                    range: 23..31,
                                    custom: (),
                                    node: Starred {
                                        value: Located {
                                            range: 24..31,
                                            custom: (),
                                            node: Name {
                                                id: "indexes",
                                                ctx: Load,
                                            },
                                        },
                                        ctx: Load,
                                    },
                                },
                                Located {
                                    range: 33..35,
                                    custom: (),
                                    node: UnaryOp {
                                        op: USub,
                                        operand: Located {
                                            range: 34..35,
                                            custom: (),
                                            node: Constant {
                                                value: Int(
                                                    1,
                                                ),
                                                kind: None,
                                            },
                                        },
                                    },
                                },
                            ],
                            ctx: Load,
                        },
                    },
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
    Located {
        range: 37..73,
        custom: (),
        node: Assign {
            targets: [
                Located {
                    range: 37..59,
                    custom: (),
                    node: Subscript {
                        value: Located {
                            range: 37..42,
                            custom: (),
                            node: Name {
                                id: "array",
                                ctx: Load,
                            },
                        },
                        slice: Located {
                            range: 43..58,
                            custom: (),
                            node: Tuple {
                                elts: [
                                    Located {
                                        range: 43..44,
                                        custom: (),
                                        node: Constant {
                                            value: Int(
                                                0,
                                            ),
                                            kind: None,
                                        },
                                    },
                                    Located {
                                        range: 46..54,
                                        custom: (),
                                        node: Starred {
                                            value: Located {
                                                range: 47..54,
                                                custom: (),
                                                node: Name {
                                                    id: "indexes",
                                                    ctx: Load,
                                                },
                                            },
                                            ctx: Load,
                                        },
                                    },
                                    Located {
                                        range: 56..58,
                                        custom: (),
                                        node: UnaryOp {
                                            op: USub,
                                            operand: Located {
                                                range: 57..58,
                                                custom: (),
                                                node: Constant {
                                                    value: Int(
                                                        1,
                                                    ),
                                                    kind: None,
                                                },
                                            },
                                        },
                                    },
                                ],
                                ctx: Load,
                            },
                        },
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                range: 62..73,
                custom: (),
                node: Name {
                    id: "array_slice",
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
    Located {
        range: 74..119,
        custom: (),
        node: Expr {
            value: Located {
                range: 74..119,
                custom: (),
                node: Subscript {
                    value: Located {
                        range: 74..79,
                        custom: (),
                        node: Name {
                            id: "array",
                            ctx: Load,
                        },
                    },
                    slice: Located {
                        range: 80..118,
                        custom: (),
                        node: Tuple {
                            elts: [
                                Located {
                                    range: 80..98,
                                    custom: (),
                                    node: Starred {
                                        value: Located {
                                            range: 81..98,
                                            custom: (),
                                            node: Name {
                                                id: "indexes_to_select",
                                                ctx: Load,
                                            },
                                        },
                                        ctx: Load,
                                    },
                                },
                                Located {
                                    range: 100..118,
                                    custom: (),
                                    node: Starred {
                                        value: Located {
                                            range: 101..118,
                                            custom: (),
                                            node: Name {
                                                id: "indexes_to_select",
                                                ctx: Load,
                                            },
                                        },
                                        ctx: Load,
                                    },
                                },
                            ],
                            ctx: Load,
                        },
                    },
                    ctx: Load,
                },
            },
        },
    },
    Located {
        range: 120..150,
        custom: (),
        node: Expr {
            value: Located {
                range: 120..150,
                custom: (),
                node: Subscript {
                    value: Located {
                        range: 120..125,
                        custom: (),
                        node: Name {
                            id: "array",
                            ctx: Load,
                        },
                    },
                    slice: Located {
                        range: 126..149,
                        custom: (),
                        node: Tuple {
                            elts: [
                                Located {
                                    range: 126..129,
                                    custom: (),
                                    node: Slice {
                                        lower: Some(
                                            Located {
                                                range: 126..127,
                                                custom: (),
                                                node: Constant {
                                                    value: Int(
                                                        3,
                                                    ),
                                                    kind: None,
                                                },
                                            },
                                        ),
                                        upper: Some(
                                            Located {
                                                range: 128..129,
                                                custom: (),
                                                node: Constant {
                                                    value: Int(
                                                        5,
                                                    ),
                                                    kind: None,
                                                },
                                            },
                                        ),
                                        step: None,
                                    },
                                },
                                Located {
                                    range: 131..149,
                                    custom: (),
                                    node: Starred {
                                        value: Located {
                                            range: 132..149,
                                            custom: (),
                                            node: Name {
                                                id: "indexes_to_select",
                                                ctx: Load,
                                            },
                                        },
                                        ctx: Load,
                                    },
                                },
                            ],
                            ctx: Load,
                        },
                    },
                    ctx: Load,
                },
            },
        },
    },
]
